docker/openshift/deployment.yaml
apiVersion: v1
kind: DeploymentConfig
metadata:
  name: users-staging
  namespace: vshn-demoapp1
  labels:
    app: users-staging
  annotations:
    openshift.io/generated-by: OpenShiftNewApp
spec:
  strategy:
    type: Rolling
    rollingParams:
      updatePeriodSeconds: 1
      intervalSeconds: 1
      timeoutSeconds: 600
      maxUnavailable: 25%
      maxSurge: 25%
    resources: {}
  triggers:
    - type: ImageChange
      imageChangeParams:
        containerNames:
          - users-staging
        from:
          kind: ImageStreamTag
          namespace: vshn-demoapp1
          name: 'users:latest'
  replicas: 1
  test: false
  selector:
    app: users-staging
    deploymentconfig: users-staging
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: users-staging
        deploymentconfig: users-staging
      annotations:
        openshift.io/container.users-staging.image.entrypoint: '["/app/bin/docs_users","foreground"]'
        openshift.io/generated-by: OpenShiftNewApp
    spec:
      containers:
        - name: users-staging
          image: '172.30.1.1:5000/vshn-demoapp1/users:latest'
          ports:
            - containerPort: 4000
              protocol: TCP
          resources:
            limits:
              cpu: 100m
              memory: 128Mi
            requests:
              cpu: 100m
              memory: 128Mi
          terminationMessagePath: /dev/termination-log
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
status:
