docker/openshift/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: users-staging
  namespace: vshn-demoapp1
  labels:
    app: users-staging
  annotations:
    openshift.io/generated-by: OpenShiftNewApp
spec:
  ports:
    -
      name: 4000-tcp
      protocol: TCP
      port: 4000
      targetPort: 4000
  selector:
    app: users-staging
    deploymentconfig: users-staging
  portalIP: 172.30.145.111
  clusterIP: 172.30.145.111
  type: ClusterIP
  sessionAffinity: None
