docker/openshift/route.yaml
apiVersion: v1
kind: Route
metadata:
  name: users-staging
  namespace: vshn-demoapp1
  labels:
    app: users-staging
  annotations:
    openshift.io/host.generated: 'true'
spec:
  host: users-staging-vshn-demoapp1.appuioapp.ch
  to:
    kind: Service
    name: users-staging
    weight: 100
  port:
    targetPort: 4000-tcp
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
